; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp8_mc_msa.c_ff_put_vp8_epel8_h6_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp8_mc_msa.c_ff_put_vp8_epel8_h6_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@subpel_filters_msa = common dso_local global i32** null, align 8
@mc_filt_mask_arr = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_put_vp8_epel8_h6_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i64, align 8
  %25 = alloca i64, align 8
  %26 = alloca i64, align 8
  %27 = alloca i64, align 8
  %28 = alloca i64, align 8
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  %32 = alloca i32, align 4
  %33 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %34 = load i32**, i32*** @subpel_filters_msa, align 8
  %35 = load i32, i32* %13, align 4
  %36 = sub nsw i32 %35, 1
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i32*, i32** %34, i64 %37
  %39 = load i32*, i32** %38, align 8
  store i32* %39, i32** %16, align 8
  %40 = load i32*, i32** @mc_filt_mask_arr, align 8
  %41 = getelementptr inbounds i32, i32* %40, i64 0
  %42 = call i64 @LD_UB(i32* %41)
  store i64 %42, i64* %24, align 8
  %43 = load i32*, i32** %10, align 8
  %44 = getelementptr inbounds i32, i32* %43, i64 -2
  store i32* %44, i32** %10, align 8
  %45 = load i32*, i32** %16, align 8
  %46 = call i32 @LD_SH(i32* %45)
  store i32 %46, i32* %29, align 4
  %47 = load i32, i32* %29, align 4
  %48 = load i32, i32* %21, align 4
  %49 = load i32, i32* %22, align 4
  %50 = load i32, i32* %23, align 4
  %51 = call i32 @SPLATI_H3_SB(i32 %47, i32 0, i32 1, i32 2, i32 %48, i32 %49, i32 %50)
  %52 = load i64, i64* %24, align 8
  %53 = add nsw i64 %52, 2
  store i64 %53, i64* %25, align 8
  %54 = load i64, i64* %24, align 8
  %55 = add nsw i64 %54, 4
  store i64 %55, i64* %26, align 8
  %56 = load i32*, i32** %10, align 8
  %57 = load i32, i32* %11, align 4
  %58 = load i32, i32* %17, align 4
  %59 = load i32, i32* %18, align 4
  %60 = load i32, i32* %19, align 4
  %61 = load i32, i32* %20, align 4
  %62 = call i32 @LD_SB4(i32* %56, i32 %57, i32 %58, i32 %59, i32 %60, i32 %61)
  %63 = load i32, i32* %17, align 4
  %64 = load i32, i32* %18, align 4
  %65 = load i32, i32* %19, align 4
  %66 = load i32, i32* %20, align 4
  %67 = call i32 @XORI_B4_128_SB(i32 %63, i32 %64, i32 %65, i32 %66)
  %68 = load i32, i32* %11, align 4
  %69 = mul nsw i32 4, %68
  %70 = load i32*, i32** %10, align 8
  %71 = sext i32 %69 to i64
  %72 = getelementptr inbounds i32, i32* %70, i64 %71
  store i32* %72, i32** %10, align 8
  %73 = load i32, i32* %17, align 4
  %74 = load i32, i32* %18, align 4
  %75 = load i32, i32* %19, align 4
  %76 = load i32, i32* %20, align 4
  %77 = load i64, i64* %24, align 8
  %78 = load i64, i64* %25, align 8
  %79 = load i64, i64* %26, align 8
  %80 = load i32, i32* %21, align 4
  %81 = load i32, i32* %22, align 4
  %82 = load i32, i32* %23, align 4
  %83 = load i32, i32* %30, align 4
  %84 = load i32, i32* %31, align 4
  %85 = load i32, i32* %32, align 4
  %86 = load i32, i32* %33, align 4
  %87 = call i32 @HORIZ_6TAP_8WID_4VECS_FILT(i32 %73, i32 %74, i32 %75, i32 %76, i64 %77, i64 %78, i64 %79, i32 %80, i32 %81, i32 %82, i32 %83, i32 %84, i32 %85, i32 %86)
  %88 = load i32, i32* %30, align 4
  %89 = load i32, i32* %31, align 4
  %90 = load i32, i32* %32, align 4
  %91 = load i32, i32* %33, align 4
  %92 = call i32 @SRARI_H4_SH(i32 %88, i32 %89, i32 %90, i32 %91, i32 7)
  %93 = load i32, i32* %30, align 4
  %94 = load i32, i32* %31, align 4
  %95 = load i32, i32* %32, align 4
  %96 = load i32, i32* %33, align 4
  %97 = call i32 @SAT_SH4_SH(i32 %93, i32 %94, i32 %95, i32 %96, i32 7)
  %98 = load i32, i32* %30, align 4
  %99 = load i32, i32* %31, align 4
  %100 = call i64 @PCKEV_XORI128_UB(i32 %98, i32 %99)
  store i64 %100, i64* %27, align 8
  %101 = load i32, i32* %32, align 4
  %102 = load i32, i32* %33, align 4
  %103 = call i64 @PCKEV_XORI128_UB(i32 %101, i32 %102)
  store i64 %103, i64* %28, align 8
  %104 = load i64, i64* %27, align 8
  %105 = load i64, i64* %28, align 8
  %106 = load i32*, i32** %8, align 8
  %107 = load i32, i32* %9, align 4
  %108 = call i32 @ST_D4(i64 %104, i64 %105, i32 0, i32 1, i32 0, i32 1, i32* %106, i32 %107)
  %109 = load i32, i32* %9, align 4
  %110 = mul nsw i32 4, %109
  %111 = load i32*, i32** %8, align 8
  %112 = sext i32 %110 to i64
  %113 = getelementptr inbounds i32, i32* %111, i64 %112
  store i32* %113, i32** %8, align 8
  %114 = load i32, i32* %12, align 4
  %115 = ashr i32 %114, 2
  %116 = sub nsw i32 %115, 1
  store i32 %116, i32* %15, align 4
  br label %117

117:                                              ; preds = %121, %7
  %118 = load i32, i32* %15, align 4
  %119 = add nsw i32 %118, -1
  store i32 %119, i32* %15, align 4
  %120 = icmp ne i32 %118, 0
  br i1 %120, label %121, label %180

121:                                              ; preds = %117
  %122 = load i32*, i32** %10, align 8
  %123 = load i32, i32* %11, align 4
  %124 = load i32, i32* %17, align 4
  %125 = load i32, i32* %18, align 4
  %126 = load i32, i32* %19, align 4
  %127 = load i32, i32* %20, align 4
  %128 = call i32 @LD_SB4(i32* %122, i32 %123, i32 %124, i32 %125, i32 %126, i32 %127)
  %129 = load i32, i32* %17, align 4
  %130 = load i32, i32* %18, align 4
  %131 = load i32, i32* %19, align 4
  %132 = load i32, i32* %20, align 4
  %133 = call i32 @XORI_B4_128_SB(i32 %129, i32 %130, i32 %131, i32 %132)
  %134 = load i32, i32* %11, align 4
  %135 = mul nsw i32 4, %134
  %136 = load i32*, i32** %10, align 8
  %137 = sext i32 %135 to i64
  %138 = getelementptr inbounds i32, i32* %136, i64 %137
  store i32* %138, i32** %10, align 8
  %139 = load i32, i32* %17, align 4
  %140 = load i32, i32* %18, align 4
  %141 = load i32, i32* %19, align 4
  %142 = load i32, i32* %20, align 4
  %143 = load i64, i64* %24, align 8
  %144 = load i64, i64* %25, align 8
  %145 = load i64, i64* %26, align 8
  %146 = load i32, i32* %21, align 4
  %147 = load i32, i32* %22, align 4
  %148 = load i32, i32* %23, align 4
  %149 = load i32, i32* %30, align 4
  %150 = load i32, i32* %31, align 4
  %151 = load i32, i32* %32, align 4
  %152 = load i32, i32* %33, align 4
  %153 = call i32 @HORIZ_6TAP_8WID_4VECS_FILT(i32 %139, i32 %140, i32 %141, i32 %142, i64 %143, i64 %144, i64 %145, i32 %146, i32 %147, i32 %148, i32 %149, i32 %150, i32 %151, i32 %152)
  %154 = load i32, i32* %30, align 4
  %155 = load i32, i32* %31, align 4
  %156 = load i32, i32* %32, align 4
  %157 = load i32, i32* %33, align 4
  %158 = call i32 @SRARI_H4_SH(i32 %154, i32 %155, i32 %156, i32 %157, i32 7)
  %159 = load i32, i32* %30, align 4
  %160 = load i32, i32* %31, align 4
  %161 = load i32, i32* %32, align 4
  %162 = load i32, i32* %33, align 4
  %163 = call i32 @SAT_SH4_SH(i32 %159, i32 %160, i32 %161, i32 %162, i32 7)
  %164 = load i32, i32* %30, align 4
  %165 = load i32, i32* %31, align 4
  %166 = call i64 @PCKEV_XORI128_UB(i32 %164, i32 %165)
  store i64 %166, i64* %27, align 8
  %167 = load i32, i32* %32, align 4
  %168 = load i32, i32* %33, align 4
  %169 = call i64 @PCKEV_XORI128_UB(i32 %167, i32 %168)
  store i64 %169, i64* %28, align 8
  %170 = load i64, i64* %27, align 8
  %171 = load i64, i64* %28, align 8
  %172 = load i32*, i32** %8, align 8
  %173 = load i32, i32* %9, align 4
  %174 = call i32 @ST_D4(i64 %170, i64 %171, i32 0, i32 1, i32 0, i32 1, i32* %172, i32 %173)
  %175 = load i32, i32* %9, align 4
  %176 = mul nsw i32 4, %175
  %177 = load i32*, i32** %8, align 8
  %178 = sext i32 %176 to i64
  %179 = getelementptr inbounds i32, i32* %177, i64 %178
  store i32* %179, i32** %8, align 8
  br label %117

180:                                              ; preds = %117
  ret void
}

declare dso_local i64 @LD_UB(i32*) #1

declare dso_local i32 @LD_SH(i32*) #1

declare dso_local i32 @SPLATI_H3_SB(i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @LD_SB4(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @XORI_B4_128_SB(i32, i32, i32, i32) #1

declare dso_local i32 @HORIZ_6TAP_8WID_4VECS_FILT(i32, i32, i32, i32, i64, i64, i64, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @SRARI_H4_SH(i32, i32, i32, i32, i32) #1

declare dso_local i32 @SAT_SH4_SH(i32, i32, i32, i32, i32) #1

declare dso_local i64 @PCKEV_XORI128_UB(i32, i32) #1

declare dso_local i32 @ST_D4(i64, i64, i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
